eliminado fetch.js, reubi de htmls limpieza en script.js

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="output.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>MUVI, EL MEJOR CINE</title>
+    <link href="./dist/output.css" rel="stylesheet">
+    <link rel="./dist/style.css" href="style.css">
 </head>
 <body>
   <div class="box-border antialiased font-sans">
@@ -69,7 +69,6 @@
     </footer>
   </div>  
 
-  <script src="script.js"></script>
-  <script src="fetch.js"></script>
+  <script src="./dist/script.js"></script>  
 </body>
 </html>
