--- a/pelicula.html
+++ b/pelicula.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Película</title>
-    <link href="output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body>   
     <div class="box-border antialiased font-sans">
@@ -55,6 +55,6 @@
               </section>
           </body>
     </div>
-    <script src="pelicula.js"></script>
+    <script src="./dist/pelicula.js"></script>
 </body>
 </html>
