ultimca correcion de la version 1.0 corregido enrutamiendo de imgs ./dist

--- a/pelicula.html
+++ b/pelicula.html
@@ -47,7 +47,7 @@
             <section class="flex flex-wrap justify-evenly align-middle items-center gap-16 p-5 mx-auto" id="section-muvi">        
                 <div class="flex flex-row items-end">
                   <span class="text-6xl font-bold text-neutral-900">MUVI </span>
-                  <img src="../assets/MUBI-logo.png" alt="MUVI LOGO" class="w-16 h-auto ml-5">
+                  <img src="./assets/MUBI-logo.png" alt="MUVI LOGO" class="w-16 h-auto ml-5">
                 </div>
                 <div class="text-neutral-600 font-semibold text-lg">
                   <span>Desde clásicos de culto hasta obras maestras modernas. <br></span> <span>Desde los grandes cineastas de la historia<br></span> <span>a los mejores directores nuevos.<br></span> <span>Películas de todo el mundo.</span>
